HW1/javali_tests/HW1/ImmediateOperands.javali.err
Debug information for file: javali_tests/HW1/ImmediateOperands.javali
AST Resulting From Parsing Stage:
ClassDecl (name: Main, superClass: Object)
| MethodDecl (argumentNames: [], argumentTypes: [], name: main, returnType: void)
| | Seq ()
| | | VarDecl (name: i0, type: int)
| | Seq ()
| | | Assign ()
| | | | Var (name: i0)
| | | | IntConst (value: 0)
| | | Assign ()
| | | | Var (name: i0)
| | | | BinaryOp (operator: B_PLUS)
| | | | | IntConst (value: 5)
| | | | | Var (name: i0)
| | | BuiltInWrite ()
| | | | Var (name: i0)

Phase exec failed because we expected to see:
5
But we actually saw:
Error: 139

The difference is:
At line   1 /   1:
< 5
> Error: 139

